--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -276,7 +276,7 @@
     "        \"early_stopping_rounds\": 50,\n",
     "        \"verbose\": False,\n",
     "    },\n",
-    "    \"n_estimators\": [100, 3000],\n",
+    "    \"n_estimators\": [100, 4000],\n",
     "    \"max_bin\": [256, 32],\n",
     "    \"tree_method\": [\"auto\", \"hist\"],\n",
     "    \"max_depth\": [4, 10],\n",
@@ -296,7 +296,7 @@
     "        \"early_stopping_rounds\": 50,\n",
     "        \"verbose\": False,\n",
     "    },\n",
-    "    \"n_estimators\": [100, 2000],\n",
+    "    \"n_estimators\": [100, 3000],\n",
     "    \"max_bin\": [256, 32],\n",
     "    \"tree_method\": [\"auto\", \"hist\"],\n",
     "    \"max_depth\": [4, 10],\n",
@@ -1205,14 +1205,11 @@
       "('adult', 'tabnet')\n",
       "('housing', 'tabnet')\n",
       "('creditcard', 'tabnet')\n",
-      "('heloc', 'tabnet')\n",
       "('covertype', 'tabnet')\n",
       "### GATE ###\n",
       "('diabetes', 'gate')\n",
-      "('adult', 'gate')\n",
       "('housing', 'gate')\n",
       "('creditcard', 'gate')\n",
-      "('heloc', 'gate')\n",
       "('covertype', 'gate')\n",
       "### RESNET ###\n",
       "('titanic', 'resnet')\n",
@@ -1231,10 +1228,8 @@
       "('creditcard', 's1dcnn')\n",
       "('covertype', 's1dcnn')\n",
       "### CATEGORYEMBEDDING ###\n",
-      "('adult', 'categoryembedding')\n",
       "### FTTRANSFORMER ###\n",
       "('diabetes', 'fttransformer')\n",
-      "('adult', 'fttransformer')\n",
       "('housing', 'fttransformer')\n",
       "('creditcard', 'fttransformer')\n",
       "('heloc', 'fttransformer')\n",
@@ -1247,7 +1242,6 @@
       "('covertype', 'tabtransformer')\n",
       "### GANDALF ###\n",
       "('diabetes', 'gandalf')\n",
-      "('adult', 'gandalf')\n",
       "('housing', 'gandalf')\n",
       "('creditcard', 'gandalf')\n",
       "('heloc', 'gandalf')\n",
@@ -1268,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1277,26 +1271,20 @@
     {
      "data": {
       "text/plain": [
-       "[('covertype', 'xgb'),\n",
-       " ('covertype', 'catboost'),\n",
-       " ('covertype', 'mlp'),\n",
-       " ('covertype', 'tabnet'),\n",
-       " ('covertype', 'gate'),\n",
-       " ('covertype', 'resnet'),\n",
-       " ('covertype', 's1dcnn'),\n",
-       " ('covertype', 'fttransformer'),\n",
-       " ('covertype', 'tabtransformer'),\n",
-       " ('covertype', 'autoint'),\n",
-       " ('covertype', 'node')]"
+       "[('heloc', 'catboost'),\n",
+       " ('heloc', 'resnet'),\n",
+       " ('heloc', 'fttransformer'),\n",
+       " ('heloc', 'tabtransformer'),\n",
+       " ('heloc', 'gandalf')]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"covertype\" in i]"
+    "[i for i in total_missing_combos if \"heloc\" in i]"
    ]
   },
   {
@@ -1308,16 +1296,6 @@
    "source": [
     "templates1 = [\n",
     "    \n",
-    "    generate_model_template(\"adult\", \"gate\", param_grid=gate_large_param_grid.copy()),\n",
-    "    generate_model_template(\n",
-    "        \"adult\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"adult\", \"categoryembedding\", param_grid=catembed_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"adult\", \"gandalf\", param_grid=gandalf_large_param_grid.copy()\n",
-    "    ),\n",
     "    generate_model_template(\n",
     "        \"adult\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
     "    ),\n",
@@ -1349,14 +1327,30 @@
     "    generate_model_template(\n",
     "        \"ageconditions\", \"tabnet\", param_grid=tabnet_small_param_grid.copy()\n",
     "    ),\n",
+    "        generate_model_template(\n",
+    "        \"creditcard\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"covertype\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"creditcard\",\n",
+    "        \"tabtransformer\",\n",
+    "        param_grid=tabtransformer_large_param_grid.copy(),\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"covertype\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"creditcard\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"covertype\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
+    "    ),\n",
     "]\n",
     "\n",
     "templates2 = [\n",
     "\n",
-    "    generate_model_template(\n",
-    "        \"heloc\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\"heloc\", \"gate\", param_grid=gate_large_param_grid.copy()),\n",
     "    generate_model_template(\n",
     "        \"heloc\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
     "    ),\n",
@@ -1399,28 +1393,28 @@
     "    ),\n",
     "]\n",
     "\n",
+    "\n",
     "templates3 = [\n",
-    "    generate_model_template(\n",
-    "        \"creditcard\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "generate_model_template(\n",
+    "        \"adult\", \"xgb\", param_grid=xgb_large_param_grid.copy()\n",
     "    ),\n",
     "    generate_model_template(\n",
-    "        \"covertype\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "        \"iris\", \"xgb\", param_grid=xgb_small_param_grid.copy()\n",
     "    ),\n",
     "    generate_model_template(\n",
-    "        \"creditcard\",\n",
-    "        \"tabtransformer\",\n",
-    "        param_grid=tabtransformer_large_param_grid.copy(),\n",
+    "        \"breastcancer\", \"xgb\", param_grid=xgb_small_param_grid.copy()\n",
+    "    ),\n",
+    "        generate_model_template(\n",
+    "        \"ageconditions\", \"xgb\", param_grid=xgb_small_param_grid.copy()\n",
+    "    ),\n",
+    "        generate_model_template(\n",
+    "        \"titanic\", \"xgb\", param_grid=xgb_small_param_grid.copy()\n",
     "    ),\n",
     "    generate_model_template(\n",
-    "        \"covertype\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"creditcard\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"covertype\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "]"
+    "        \"heloc\", \"xgb\", param_grid=xgb_large_param_grid.copy()),\n",
+    "    \n",
+    "        generate_model_template(\n",
+    "        \"heloc\", \"xgb\", param_grid=xgb_large_param_grid.copy()) ]"
    ]
   },
   {
@@ -1475,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
