--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -296,10 +296,10 @@
     "        \"early_stopping_rounds\": 50,\n",
     "        \"verbose\": False,\n",
     "    },\n",
-    "    \"n_estimators\": [100, 3000],\n",
+    "    \"n_estimators\": [100, 4000],\n",
     "    \"max_bin\": [256, 32],\n",
     "    \"tree_method\": [\"auto\", \"hist\"],\n",
-    "    \"max_depth\": [4, 10],\n",
+    "    \"max_depth\": [4, 9],\n",
     "    \"learning_rate\": [0.1, 0.33],\n",
     "    \"subsample\": [0.7, 1.0],\n",
     "    \"colsample_bytree\": [0.5, 1.0],\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1236,7 +1236,6 @@
       "('covertype', 'fttransformer')\n",
       "### TABTRANSFORMER ###\n",
       "('diabetes', 'tabtransformer')\n",
-      "('adult', 'tabtransformer')\n",
       "('housing', 'tabtransformer')\n",
       "('heloc', 'tabtransformer')\n",
       "('covertype', 'tabtransformer')\n",
@@ -1262,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1278,7 +1277,7 @@
        " ('heloc', 'gandalf')]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
@@ -1396,17 +1395,17 @@
     "\n",
     "templates3 = [\n",
     "generate_model_template(\n",
-    "        \"creditcard\", \"xgb\", param_grid=xgb_large_param_grid.copy()\n",
-    "    ),   \n",
+    "        \"heloc\", \"xgb\", param_grid=xgb_large_param_grid.copy()\n",
+    "    ),\n",
     "generate_model_template(\n",
-    "        \"covertype\", \"xgb\", param_grid=xgb_large_param_grid.copy()\n",
+    "        \"diabetes\", \"xgb\", param_grid=xgb_large_param_grid.copy()\n",
     "    )   \n",
     " ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1420,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 23,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1432,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1444,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1456,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 26,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
