update pre xgb 2.0

--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1270,25 +1270,24 @@
     {
      "data": {
       "text/plain": [
-       "[('heloc', 'catboost'),\n",
-       " ('heloc', 'resnet'),\n",
-       " ('heloc', 'fttransformer'),\n",
-       " ('heloc', 'tabtransformer'),\n",
-       " ('heloc', 'gandalf')]"
+       "[('diabetes', 'mlp'),\n",
+       " ('housing', 'mlp'),\n",
+       " ('creditcard', 'mlp'),\n",
+       " ('covertype', 'mlp')]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"heloc\" in i]"
+    "[i for i in total_missing_combos if \"mlp\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
@@ -1359,9 +1358,7 @@
     "    generate_model_template(\n",
     "        \"heloc\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
     "    ),\n",
-    "    generate_model_template(\n",
-    "        \"heloc\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "    ),\n",
+    "    \n",
     "    generate_model_template(\"diabetes\", \"mlp\", param_grid=mlp_large_param_grid.copy()),\n",
     "    generate_model_template(\n",
     "        \"diabetes\", \"s1dcnn\", param_grid=s1dcnn_large_param_grid.copy()\n",
@@ -1382,30 +1379,40 @@
     "        \"diabetes\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
     "    ),\n",
     "    generate_model_template(\n",
-    "        \"diabetes\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
     "        \"heloc\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
     "    ),\n",
     "    generate_model_template(\n",
     "        \"diabetes\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
     "    ),\n",
+    "    generate_model_template(\n",
+    "        \"heloc\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"diabetes\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
+    "    ),\n",
     "]\n",
     "\n",
     "\n",
-    "templates3 = [\n",
+    "templates2 = [\n",
     "generate_model_template(\n",
-    "        \"heloc\", \"xgb\", param_grid=xgb_large_param_grid.copy()\n",
+    "        \"diabetes\", \"mlp\", param_grid=mlp_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"housing\", \"mlp\", param_grid=mlp_large_param_grid.copy()\n",
     "    ),\n",
     "generate_model_template(\n",
-    "        \"diabetes\", \"xgb\", param_grid=xgb_large_param_grid.copy()\n",
-    "    )   \n",
+    "        \"creditcard\", \"mlp\", param_grid=mlp_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"covertype\", \"mlp\", param_grid=mlp_large_param_grid.copy()\n",
+    "    ),\n",
+    "    \n",
     " ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1419,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1431,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1443,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1455,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
