--- a/notebooks/tests/DatasetsExploration.ipynb
+++ b/notebooks/tests/DatasetsExploration.ipynb
@@ -164,11 +164,7 @@
     "        print(\"SUCCESS\", dataset_name)\n",
     "    except Exception as e:\n",
     "        print(\"FAIL\", dataset_name)\n",
-    "        print(repr(e))\n",
-    "\n",
-    "# Print aggregated summary\n",
-    "print(\"\\nAggregated Dataset Summary:\")\n",
-    "print(summary_data)\n"
+    "        print(repr(e))"
    ]
   },
   {
@@ -183,189 +179,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "8001ba04-356f-4498-80ee-ece1adf32b30",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Dataset</th>\n",
-       "      <th>Target Type</th>\n",
-       "      <th>Total Samples</th>\n",
-       "      <th>Num Classes</th>\n",
-       "      <th>Pos. Class Rate</th>\n",
-       "      <th>Total Features</th>\n",
-       "      <th>Num Categorical</th>\n",
-       "      <th>Num Numerical</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>creditcard</td>\n",
-       "      <td>Classification</td>\n",
-       "      <td>284807</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0017</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>iris</td>\n",
-       "      <td>Classification</td>\n",
-       "      <td>150</td>\n",
-       "      <td>3</td>\n",
-       "      <td>None</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>Classification</td>\n",
-       "      <td>891</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.3838</td>\n",
-       "      <td>12</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>breastcancer</td>\n",
-       "      <td>Classification</td>\n",
-       "      <td>569</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.6274</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>housing</td>\n",
-       "      <td>Regression</td>\n",
-       "      <td>20640</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>ageconditions</td>\n",
-       "      <td>Classification</td>\n",
-       "      <td>622</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.1736</td>\n",
-       "      <td>56</td>\n",
-       "      <td>0</td>\n",
-       "      <td>56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>adult</td>\n",
-       "      <td>Classification</td>\n",
-       "      <td>32561</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.2408</td>\n",
-       "      <td>15</td>\n",
-       "      <td>8</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>heloc</td>\n",
-       "      <td>Classification</td>\n",
-       "      <td>10459</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.5219</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>covertype</td>\n",
-       "      <td>Classification</td>\n",
-       "      <td>281011</td>\n",
-       "      <td>7</td>\n",
-       "      <td>None</td>\n",
-       "      <td>54</td>\n",
-       "      <td>0</td>\n",
-       "      <td>54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>diabetes</td>\n",
-       "      <td>Classification</td>\n",
-       "      <td>101766</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.1116</td>\n",
-       "      <td>47</td>\n",
-       "      <td>39</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Dataset     Target Type Total Samples Num Classes Pos. Class Rate  \\\n",
-       "0     creditcard  Classification        284807           2          0.0017   \n",
-       "1           iris  Classification           150           3            None   \n",
-       "2        titanic  Classification           891           2          0.3838   \n",
-       "3   breastcancer  Classification           569           2          0.6274   \n",
-       "4        housing      Regression         20640        None            None   \n",
-       "5  ageconditions  Classification           622           2          0.1736   \n",
-       "6          adult  Classification         32561           2          0.2408   \n",
-       "7          heloc  Classification         10459           2          0.5219   \n",
-       "8      covertype  Classification        281011           7            None   \n",
-       "9       diabetes  Classification        101766           2          0.1116   \n",
-       "\n",
-       "  Total Features Num Categorical Num Numerical  \n",
-       "0             30               0            30  \n",
-       "1              4               0             4  \n",
-       "2             12               5             7  \n",
-       "3             30               0            30  \n",
-       "4             10               0            10  \n",
-       "5             56               0            56  \n",
-       "6             15               8             7  \n",
-       "7             24               0            24  \n",
-       "8             54               0            54  \n",
-       "9             47              39             8  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'summary_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msummary_data\u001b[49m\u001b[38;5;241m.\u001b[39msort_values(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTotal Samples\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'summary_data' is not defined"
+     ]
     }
    ],
    "source": [
-    "summary_data"
+    "summary_data.sort_values(\"Total Samples\")"
    ]
   },
   {
