--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1188,15 +1188,11 @@
       "('breastcancer', 'catboost')\n",
       "('ageconditions', 'catboost')\n",
       "('diabetes', 'catboost')\n",
-      "('adult', 'catboost')\n",
       "('housing', 'catboost')\n",
       "('creditcard', 'catboost')\n",
       "('heloc', 'catboost')\n",
       "('covertype', 'catboost')\n",
       "### MLP ###\n",
-      "('diabetes', 'mlp')\n",
-      "('housing', 'mlp')\n",
-      "('creditcard', 'mlp')\n",
       "('covertype', 'mlp')\n",
       "### TABNET ###\n",
       "('breastcancer', 'tabnet')\n",
@@ -1223,7 +1219,6 @@
       "('covertype', 'resnet')\n",
       "### S1DCNN ###\n",
       "('diabetes', 's1dcnn')\n",
-      "('adult', 's1dcnn')\n",
       "('housing', 's1dcnn')\n",
       "('creditcard', 's1dcnn')\n",
       "('covertype', 's1dcnn')\n",
@@ -1261,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 73,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1270,24 +1265,29 @@
     {
      "data": {
       "text/plain": [
-       "[('diabetes', 'mlp'),\n",
-       " ('housing', 'mlp'),\n",
-       " ('creditcard', 'mlp'),\n",
-       " ('covertype', 'mlp')]"
+       "[('iris', 'catboost'),\n",
+       " ('titanic', 'catboost'),\n",
+       " ('breastcancer', 'catboost'),\n",
+       " ('ageconditions', 'catboost'),\n",
+       " ('diabetes', 'catboost'),\n",
+       " ('housing', 'catboost'),\n",
+       " ('creditcard', 'catboost'),\n",
+       " ('heloc', 'catboost'),\n",
+       " ('covertype', 'catboost')]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"mlp\" in i]"
+    "[i for i in total_missing_combos if \"catboost\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 74,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
@@ -1295,30 +1295,9 @@
     "templates1 = [\n",
     "    \n",
     "    generate_model_template(\n",
-    "        \"adult\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"adult\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"breastcancer\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"adult\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"adult\", \"s1dcnn\", param_grid=s1dcnn_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
     "        \"adult\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
     "    ),\n",
     "    \n",
-    "    generate_model_template(\n",
-    "        \"titanic\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"ageconditions\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
-    "    ),\n",
     "    generate_model_template(\n",
     "        \"breastcancer\", \"tabnet\", param_grid=tabnet_small_param_grid.copy()\n",
     "    ),\n",
@@ -1345,22 +1324,30 @@
     "    generate_model_template(\n",
     "        \"covertype\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
     "    ),\n",
+    "    generate_model_template(\n",
+    "        \"titanic\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"ageconditions\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
+    "    ),\n",
+    "        generate_model_template(\n",
+    "        \"breastcancer\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"adult\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
+    "    ),\n",
     "]\n",
     "\n",
     "templates2 = [\n",
     "\n",
-    "    generate_model_template(\n",
-    "        \"heloc\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "    ),\n",
+    "   \n",
     "    generate_model_template(\n",
     "        \"heloc\", \"gandalf\", param_grid=gandalf_large_param_grid.copy()\n",
     "    ),\n",
     "    generate_model_template(\n",
     "        \"heloc\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
     "    ),\n",
-    "    \n",
-    "    generate_model_template(\"diabetes\", \"mlp\", param_grid=mlp_large_param_grid.copy()),\n",
-    "    generate_model_template(\n",
+    "        generate_model_template(\n",
     "        \"diabetes\", \"s1dcnn\", param_grid=s1dcnn_large_param_grid.copy()\n",
     "    ),\n",
     "    generate_model_template(\n",
@@ -1369,6 +1356,14 @@
     "    generate_model_template(\n",
     "        \"diabetes\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
     "    ),\n",
+    "     generate_model_template(\n",
+    "        \"heloc\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "    ),\n",
+    "\n",
+    "]\n",
+    "\n",
+    "\n",
+    "templates3 = [\n",
     "    generate_model_template(\n",
     "        \"diabetes\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
     "    ),\n",
@@ -1389,30 +1384,13 @@
     "    ),\n",
     "    generate_model_template(\n",
     "        \"diabetes\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "    ),\n",
-    "]\n",
-    "\n",
-    "\n",
-    "templates2 = [\n",
-    "generate_model_template(\n",
-    "        \"diabetes\", \"mlp\", param_grid=mlp_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"housing\", \"mlp\", param_grid=mlp_large_param_grid.copy()\n",
-    "    ),\n",
-    "generate_model_template(\n",
-    "        \"creditcard\", \"mlp\", param_grid=mlp_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"covertype\", \"mlp\", param_grid=mlp_large_param_grid.copy()\n",
-    "    ),\n",
-    "    \n",
+    "    )\n",
     " ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 75,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1426,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 76,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1438,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 77,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1450,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 78,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1462,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 79,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
