--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 154,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 155,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 156,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 157,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 158,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 159,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 160,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 161,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 162,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 163,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -569,13 +569,13 @@
     "        \"early_stopping_patience\": 8,\n",
     "        \"attn_feature_importance\": False,\n",
     "    },\n",
-    "    \"batch_size\": [1024, 2048, 4096],\n",
-    "    \"num_heads\": [4, 10],\n",
+    "    \"batch_size\": [1024, 2048],\n",
+    "    \"num_heads\": [4, 8],\n",
     "    \"input_embed_dim_multiplier\": [2, 6],\n",
     "    \"embedding_initialization\": [\"kaiming_uniform\", \"kaiming_normal\"],\n",
     "    \"embedding_dropout\": [0.05, 0.2],\n",
     "    \"shared_embedding_fraction\": [0.125, 0.25, 0.5],\n",
-    "    \"num_attn_blocks\": [4, 8],\n",
+    "    \"num_attn_blocks\": [4, 7],\n",
     "    \"attn_dropout\": [0.05, 0.2],\n",
     "    \"add_norm_dropout\": [0.05, 0.2],\n",
     "    \"ff_dropout\": [0.05, 0.2],\n",
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 164,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 165,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 166,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 167,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 168,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 169,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 170,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 171,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1195,10 +1195,7 @@
       "### MLP ###\n",
       "('covertype', 'mlp')\n",
       "### TABNET ###\n",
-      "('breastcancer', 'tabnet')\n",
-      "('ageconditions', 'tabnet')\n",
       "('diabetes', 'tabnet')\n",
-      "('adult', 'tabnet')\n",
       "('housing', 'tabnet')\n",
       "('creditcard', 'tabnet')\n",
       "('covertype', 'tabnet')\n",
@@ -1218,7 +1215,6 @@
       "('heloc', 'resnet')\n",
       "('covertype', 'resnet')\n",
       "### S1DCNN ###\n",
-      "('diabetes', 's1dcnn')\n",
       "('housing', 's1dcnn')\n",
       "('creditcard', 's1dcnn')\n",
       "('covertype', 's1dcnn')\n",
@@ -1232,13 +1228,10 @@
       "### TABTRANSFORMER ###\n",
       "('diabetes', 'tabtransformer')\n",
       "('housing', 'tabtransformer')\n",
-      "('heloc', 'tabtransformer')\n",
       "('covertype', 'tabtransformer')\n",
       "### GANDALF ###\n",
-      "('diabetes', 'gandalf')\n",
       "('housing', 'gandalf')\n",
       "('creditcard', 'gandalf')\n",
-      "('heloc', 'gandalf')\n",
       "### AUTOINT ###\n",
       "('covertype', 'autoint')\n",
       "### NODE ###\n",
@@ -1256,65 +1249,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('iris', 'catboost'),\n",
-       " ('titanic', 'catboost'),\n",
-       " ('breastcancer', 'catboost'),\n",
-       " ('ageconditions', 'catboost'),\n",
-       " ('diabetes', 'catboost'),\n",
-       " ('housing', 'catboost'),\n",
-       " ('creditcard', 'catboost'),\n",
-       " ('heloc', 'catboost'),\n",
-       " ('covertype', 'catboost')]"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[i for i in total_missing_combos if \"catboost\" in i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 172,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
    "source": [
     "templates1 = [\n",
-    "    \n",
-    "    generate_model_template(\n",
-    "        \"adult\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    \n",
-    "    generate_model_template(\n",
-    "        \"breastcancer\", \"tabnet\", param_grid=tabnet_small_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"ageconditions\", \"tabnet\", param_grid=tabnet_small_param_grid.copy()\n",
-    "    ),\n",
-    "        generate_model_template(\n",
-    "        \"creditcard\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"covertype\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"creditcard\",\n",
-    "        \"tabtransformer\",\n",
-    "        param_grid=tabtransformer_large_param_grid.copy(),\n",
-    "    ),\n",
+    "\n",
     "    generate_model_template(\n",
     "        \"covertype\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
     "    ),\n",
@@ -1335,6 +1276,12 @@
     "    ),\n",
     "    generate_model_template(\n",
     "        \"adult\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
+    "    ),\n",
+    "        generate_model_template(\n",
+    "        \"creditcard\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"covertype\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
     "    ),\n",
     "]\n",
     "\n",
@@ -1364,9 +1311,7 @@
     "\n",
     "\n",
     "templates3 = [\n",
-    "    generate_model_template(\n",
-    "        \"diabetes\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "    ),\n",
+    "    \n",
     "    generate_model_template(\n",
     "        \"diabetes\", \"gandalf\", param_grid=gandalf_large_param_grid.copy()\n",
     "    ),\n",
@@ -1384,13 +1329,49 @@
     "    ),\n",
     "    generate_model_template(\n",
     "        \"diabetes\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "    )\n",
-    " ]"
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"diabetes\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "    ),\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 173,
+   "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('covertype', 'xgb'),\n",
+       " ('covertype', 'catboost'),\n",
+       " ('covertype', 'mlp'),\n",
+       " ('covertype', 'tabnet'),\n",
+       " ('covertype', 'gate'),\n",
+       " ('covertype', 'resnet'),\n",
+       " ('covertype', 's1dcnn'),\n",
+       " ('covertype', 'fttransformer'),\n",
+       " ('covertype', 'tabtransformer'),\n",
+       " ('covertype', 'autoint'),\n",
+       " ('covertype', 'node')]"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in total_missing_combos if \"covertype\" in i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1404,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 175,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1416,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 176,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1428,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 177,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1440,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 178,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
